--- a/src/rendering/Views/Shared/Components/SitecoreComponent/Movies.cshtml
+++ b/src/rendering/Views/Shared/Components/SitecoreComponent/Movies.cshtml
@@ -24,7 +24,9 @@
 
                 <div class="result">
 
-                    <div class="selection-info"></div>
+                    <div class="selection-info">
+                        @Model.RecommendedText
+                    </div>
 
                     <div class="movie-picture">
 
@@ -32,7 +34,9 @@
                     <div class="movie-info">
                         <span class="movie-title"></span>
 
-                        <span class="movie-desc"></span>
+                        <span class="movie-desc">
+
+                        </span>
                     </div>
                 </div>
             </div>
